# ProteiITSchool2025-ProjectPGW

./: CMakeLists.txt  client_config.json  demo.sh  server_config.json
client/: main.cpp
common/: bcd_utils.cpp  bcd_utils.h
server/: cdr_logger.cpp  cdr_logger.h  config.cpp  config.h  logger.cpp  logger.h  main.cpp  pgw_server.cpp  pgw_server.h  session_manager.cpp  session_manager.h
tests/: test_bcd.cpp  test_cdr.cpp  test_config.cpp  test_session.cpp
